إضافة الملفات الأولية للموقع

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             </nav>
         </div>
         <h1>أهلاً بك في نظامنا</h1>
+        <h1>محمد حامد</h1>
+        <h1>فصل 3/1</h1>
     </header>
     <div id="particles-js"></div>
     <span id="typed"></span>
@@ -220,7 +222,7 @@
                     <span>⭐</span><span>⭐</span><span>⭐</span><span>⭐</span><span>⭐</span>
                 </div>
                 <p>حل وانت مطمن</p>
-                <a href="link-to-book-history.pdf" class="download-btn">تحميل</a>
+                <a href="https://drive.google.com/file/d/1P_qUZashk5Ej46hraTg2P36Kb70Sx5wI/view?usp=sharing" class="download-btn">تحميل</a>
             </div>
             <div class="rating-card">
                 <h3>عربي</h3>
@@ -245,11 +247,6 @@
     <footer>
         <div class="footer-content">
             <p>حقوق الطبع والنشر &copy; 2024 موقع لخصتهالك. جميع الحقوق محفوظة.</p>
-            <div class="social-media">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </footer>
