--- a/index.html
+++ b/index.html
@@ -10,11 +10,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Amiri:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.3.1/dist/aos.css">
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.3.1/dist/aos.js"></script>
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- إضافة Font Awesome إلى رأس HTML -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+    <!-- أضف هذا السطر في رأس HTML بعد المكتبات الأخرى -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <meta name="description" content="موقع يقدم لك مجموعة مميزة من الكتب والمقالات.">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+
+</script>
 <meta name="keywords" content="كتب, مقالات, موارد تعليمية">
 <meta name="author" content="محمد حامد">
 </head>
@@ -36,8 +53,8 @@
             </nav>
         </div>
         <h1>أهلاً بك في نظامنا</h1>
-        <h1>محمد حامد</h1>
         <h1>فصل 3/1</h1>
+    </body>
     </header>
     <div id="particles-js"></div>
     <span id="typed"></span>
@@ -49,6 +66,7 @@
                 <h3>اللغة العربية</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="https://drive.google.com/file/d/1Nck-xs-2GWl2-NHJ6kbXQRJ6Y5etS3Pp/view?usp=sharing" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -58,6 +76,7 @@
                 <h3>الرياضيات</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="path-to-your-book.pdf" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -67,6 +86,7 @@
                 <h3>العلوم</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="path-to-your-book.pdf" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -76,6 +96,7 @@
                 <h3>اللغة الإنجليزية</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="path-to-your-book.pdf" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -85,6 +106,7 @@
                 <h3>التاريخ</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="path-to-your-book.pdf" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -94,6 +116,7 @@
                 <h3>الألمانية</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="path-to-your-book.pdf" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -103,6 +126,7 @@
                 <h3>الفرنسية</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="path-to-your-book.pdf" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -112,6 +136,7 @@
                 <h3>الفلسفة</h3>
                 <div class="button-container">
                     <button class="view-button">رؤية</button>
+                    <a href="path-to-your-book.pdf" download></a>
                     <button class="download-button">تحميل</button>
                 </div>
                 <span class="rating">⭐⭐⭐⭐⭐</span>
@@ -241,9 +266,42 @@
                 <a href="link-to-book-history.pdf" class="download-btn">تحميل</a>
             </div>
         </div>
+        <div class="grade-table">
+            <table>
+              <thead>
+                <tr>
+                  <th>المجموع</th>
+                  <th>المواظبة والسلوك</th>
+                  <th>الاختبارات الأسبوعية</th>
+                  <th>كشكول الحصة الواجب</th>
+                  <th>تقييم الشهر الثاني</th>
+                  <th>تقييم الشهر الأول</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>70</td>
+                  <td>10</td>
+                  <td>15</td>
+                  <td>15</td>
+                  <td>15</td>
+                  <td>15</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>          
     </section>
-    
-
+    <div class="tips-section" id="tips">
+        <h2>نصائح</h2>
+        <div class="tip" id="tip1">
+        <img src="E:\اعمالي\برمجة\New folder\imges 1.jpg" alt="صورة نصائح" class="tips-image">
+        <img src="E:\اعمالي\برمجة\New folder\imges.jpg" alt="صورة نصائح" class="tips-image">
+    </div>    
+    <div class="play-with-me">
+        <h2>العب معي!</h2>
+        <button onclick="location.href='play-with-me.html'">العب معي</button>
+    </div>   
+    </div> 
     <footer>
         <div class="footer-content">
             <p>حقوق الطبع والنشر &copy; 2024 موقع لخصتهالك. جميع الحقوق محفوظة.</p>
@@ -251,5 +309,9 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
+    <script>
+    </script>
 </body>
 </html>
